<resources>
    <string name="app_name">IMKB Hisse ve Endeksler</string>

    <string name="main_view_title">VERİPARK</string>
    <string name="main_view_button">IMKB Hisse Senetleri/Endeksler</string>

    <string name="stocks_indices">Hisse ve Endeksler</string>
    <string name="ascendants">Yükselenler</string>
    <string name="fallen">Düşenler</string>
    <string name="volume_30">Hacme göre - 30</string>
    <string name="volume_50">Hacme göre - 50</string>
    <string name="volume_100">Hacme göre - 100</string>

    <string name="open_drawer">Çekmeceyi Aç</string>
    <string name="close_drawer">Çekmeceyi Kapat</string>

    <string name="search">Ara</string>

    <string name="symbol">Sembol</string>
    <string name="price">Fiyat</string>
    <string name="difference">Fark</string>
    <string name="volume">Hacim</string>
    <string name="buying">Alış</string>
    <string name="sales">Satış</string>
    <string name="change">Değişim</string>

    <string name="symbol_symbol">Sembol: </string>
    <string name="price_symbol">Fiyat: </string>
    <string name="difference_symbol">% Fark: </string>
    <string name="volume_symbol">Hacim: </string>
    <string name="buying_symbol">Alış: </string>
    <string name="sales_symbol">Satış: </string>

    <string name="daily_low_symbol">Günlük Düşük: </string>
    <string name="daily_high_symbol">Günlük Yüksek: </string>
    <string name="piece_symbol">Adet: </string>
    <string name="ceiling_symbol">Tavan: </string>
    <string name="base_symbol">Taban: </string>
    <string name="change_symbol">Değişim: </string>

    <string name="no_data">Veri Yok!</string>
    <string name="upper_limit">Upper Limit</string>
</resources>