<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/titles_layout"
    android:layout_width="match_parent"
    android:layout_height="30dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/symbol"
        android:layout_weight="1"
        android:layout_height="fill_parent"
        android:layout_width="0dp"
        android:textSize="13sp"
        android:text="@string/symbol"
        android:gravity="center"
        android:textColor="@color/fragment_title_text"
        android:maxLines="1" />
    <TextView
        android:id="@+id/price"
        android:layout_weight="1"
        android:layout_height="fill_parent"
        android:layout_width="0dp"
        android:textSize="13sp"
        android:text="@string/price"
        android:textColor="@color/fragment_title_text"
        android:gravity="center"
        android:maxLines="1"/>
    <TextView
        android:id="@+id/difference"
        android:layout_weight="1"
        android:layout_height="fill_parent"
        android:layout_width="0dp"
        android:textSize="13sp"
        android:text="@string/difference"
        android:textColor="@color/fragment_title_text"
        android:gravity="center"
        android:maxLines="1"/>
    <TextView
        android:id="@+id/volume"
        android:layout_weight="1"
        android:layout_height="fill_parent"
        android:layout_width="0dp"
        android:textSize="13sp"
        android:text="@string/volume"
        android:textColor="@color/fragment_title_text"
        android:gravity="center"
        android:maxLines="1"/>
    <TextView
        android:id="@+id/buying"
        android:layout_weight="1"
        android:layout_height="fill_parent"
        android:layout_width="0dp"
        android:textSize="13sp"
        android:text="@string/buying"
        android:textColor="@color/fragment_title_text"
        android:gravity="center"
        android:maxLines="1"/>
    <TextView
        android:id="@+id/sales"
        android:layout_weight="1"
        android:layout_height="fill_parent"
        android:layout_width="0dp"
        android:textSize="13sp"
        android:text="@string/sales"
        android:textColor="@color/fragment_title_text"
        android:gravity="center"
        android:maxLines="1" />

    <ImageView
        android:id="@+id/arrow"
        android:layout_weight="1"
        android:layout_height="fill_parent"
        android:layout_width="0dp"
        android:src="@drawable/arrow_up"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter" />

</LinearLayout>