<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.StocksIndicesFragment">

    <EditText
        android:id="@+id/search_editText"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:inputType="text"
        android:background="@drawable/search_edditext_bg"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="15dp"
        android:hint="@string/search"
        android:paddingStart="7dp"/>

    <LinearLayout
        android:id="@+id/titles_layout"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:background="@color/fragment_title_bg"
        app:layout_constraintTop_toBottomOf="@+id/search_editText"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <TextView
            android:id="@+id/symbol"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:textSize="14sp"
            android:text="@string/symbol"
            android:gravity="center"
            android:textColor="@color/fragment_title_text" />
        <TextView
            android:id="@+id/price"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:textSize="14sp"
            android:text="@string/price"
            android:textColor="@color/fragment_title_text"
            android:gravity="center"/>
        <TextView
            android:id="@+id/difference"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:textSize="14sp"
            android:text="@string/difference"
            android:textColor="@color/fragment_title_text"
            android:gravity="center"/>
        <TextView
            android:id="@+id/volume"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:textSize="14sp"
            android:text="@string/volume"
            android:textColor="@color/fragment_title_text"
            android:gravity="center"/>
        <TextView
            android:id="@+id/buying"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:textSize="14sp"
            android:text="@string/buying"
            android:textColor="@color/fragment_title_text"
            android:gravity="center"/>
        <TextView
            android:id="@+id/sales"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:textSize="14sp"
            android:text="@string/sales"
            android:textColor="@color/fragment_title_text"
            android:gravity="center" />

        <TextView
            android:id="@+id/change"
            android:layout_weight="1"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:textSize="14sp"
            android:text="@string/change"
            android:textColor="@color/fragment_title_text"
            android:gravity="center"
            android:maxLines="1"/>
    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titles_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/stockIndices_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.constraintlayout.widget.ConstraintLayout>