<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.DetailViewActivity"
    android:background="@color/fragment_item_bg">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/status_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="15dp">

        <TextView
            android:id="@+id/symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/symbol_symbol"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/set_symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/symbol"
            android:layout_marginStart="10dp"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_symbol"
            app:layout_constraintTop_toBottomOf="@+id/symbol"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="10dp"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/set_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/symbol"
            app:layout_constraintLeft_toRightOf="@+id/price"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/difference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/difference_symbol"
            app:layout_constraintTop_toBottomOf="@+id/price"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="10dp"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/set_difference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/price"
            app:layout_constraintLeft_toRightOf="@+id/difference"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/volume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/volume"
            app:layout_constraintTop_toBottomOf="@+id/difference"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="10dp"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/set_volume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/difference"
            app:layout_constraintLeft_toRightOf="@+id/volume"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/buying"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buying_symbol"
            app:layout_constraintTop_toBottomOf="@+id/volume"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="10dp"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/set_buying"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/volume"
            app:layout_constraintLeft_toRightOf="@+id/buying"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/sales"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sales_symbol"
            app:layout_constraintTop_toBottomOf="@+id/buying"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="10dp"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/set_ales"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/buying"
            app:layout_constraintLeft_toRightOf="@+id/sales"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/daily_low_symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daily_low_symbol"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/set_daily_low_symbol"
            android:textSize="15sp"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:id="@+id/set_daily_low_symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="10dp"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/daily_high_symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daily_high_symbol"
            app:layout_constraintTop_toBottomOf="@+id/daily_low_symbol"
            app:layout_constraintRight_toLeftOf="@+id/set_daily_high_symbol"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/set_daily_high_symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/symbol"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/piece_symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/piece_symbol"
            app:layout_constraintTop_toBottomOf="@+id/daily_high_symbol"
            app:layout_constraintRight_toLeftOf="@+id/set_piece_symbol"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/set_piece_symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/price"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/ceiling_symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ceiling_symbol"
            app:layout_constraintTop_toBottomOf="@+id/piece_symbol"
            app:layout_constraintRight_toLeftOf="@+id/set_ceiling_symbol"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/set_ceiling_symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/difference"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/base_symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/base_symbol"
            app:layout_constraintTop_toBottomOf="@+id/ceiling_symbol"
            app:layout_constraintRight_toLeftOf="@+id/set_base_symbol"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/set_base_symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/ceiling_symbol"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/change_symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_symbol"
            app:layout_constraintTop_toBottomOf="@+id/buying"
            app:layout_constraintRight_toLeftOf="@+id/set_change_symbol"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="15sp"/>
        <ImageView
            android:id="@+id/set_change_symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/buying"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:scaleType="fitCenter"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/stock_item_lineChart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/status_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>